<resources>
    <string name="app_name">Fifir</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--login-->
    <string name="login_username">Tên đăng nhập</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_saveaccount">Lưu tài khoản.</string>
    <string name="login_keeplogin">Duy trì đăng nhập.</string>
    <string name="login_login">Đăng nhập</string>
    <string name="login_create">Không có tài khoản? Đăng kí</string>
    <string name="login_isEmty">Vui lòng nhập đủ các trường!</string>
    <string name="login_error_user">Tên đăng nhập có 8-16 kí tự</string>
    <string name="login_error_password">Mật khẩu có 8-16 kí tự</string>
    <string name="login_fail">Tên đăng nhập hoặc mật khẩu không đúng</string>
    <string name="login_user_not_exist">Tên đăng nhập này chưa tồn tại.</string>
    <string name="login_question_register">Đăng kí ngay?</string>
    <string name="login_success">Đăng nhập thành công</string>


    <!--register-->
    <string name="reg_username">displayname</string>
    <string name="reg_pass">password</string>
    <string name="reg_repass">Nhập lại password</string>
    <string name="reg_bt_reg">Register</string>
    <string name="reg_login">Có tài khoản? Đăng nhập</string>
    <string name="title_activity_main">Main</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--chat-->
    <string name="chat_sending">Đang gửi</string>
    <string name="chat_input_message">Nhập văn bản</string>

    <!--notify-->
    <string name="notify_title_message">Có tin nhắn mới</string>
    <string name="notify_content_message">Click để xem</string>
    <string name="notify_request_friend">Bạn nhận được lời mời kết bạn mới</string>
    <string name="notify_request_content">Click để xem</string>

    <!--item_listview_request_friend-->
    <string name="accept">Chấp nhận</string>
    <string name="cancel">Xóa yêu cầu</string>

    <!--time-->
    <string name="now_time">Vừa xong</string>
    <string name="time2"> phút trước</string>
    <string name="time3"> tiếng trước</string>
    <string name="time4"> ngày trước</string>

    <!--conversation-->
    <string name="conversatinon_single">BẠN</string>
    <string name="conversatinon_group">NHÓM</string>
    <string name="delete">Xóa</string>
    <string name="deleting">Đang Xóa</string>
    <string name="all">Tất cả</string>

    <string name="input_conversation">Nhập tên cuộc hội thoại</string>
    <string name="request_friend">Lời mời kết bạn</string>

    <!--friend-->
    <string name="friend_input_search">Nhập tên bạn bè</string>
    <string name="friend_requested">Đang chờ</string>
    <string name="friend_request">Gửi yêu cầu</string>

    <string name="responce_accept">đã đồng ý</string>
    <string name="responce_reject">đã từ chối</string>
    <string name="responce_notify">lời mời kết bạn của bạn.</string>


    <!--status-->
    <string name="status_hint">Bạn đang nghĩ gì?</string>
    <string name="status_post">Đăng</string>
    <string name="status_comment">Bình luận</string>
    <string name="status_like">Thích</string>

    <string name="personal">Vào trang cá nhân</string>
    <string name="logout">Đăng xuất</string>
    <string name="no_choose">Chưa chọn bạn bè nào.</string>


    <string name="notifi_error">Có lỗi xảy ra, vui lòng thử lại</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--register-->
    <string name="input_username">Tên đăng nhập</string>
    <string name="input_password">Mật khẩu</string>
    <string name="input_retype_pass">Nhập lại mật khẩu</string>
    <string name="input_email">Email</string>
    <string name="input_fullname">Tên đầy đủ</string>
    <string name="input_birth">Chọn ngày sinh</string>
    <string name="register">Đăng kí</string>
</resources>
