<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:background="#FAFAFA"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <!-- Username Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/login_ed_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:text="admin"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/login_ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:text="1111"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Save check box-->
        <CheckBox
            android:id="@+id/login_cb_save"
            android:text="@string/login_saveaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/login_cb_keeplogin"
            android:text="@string/login_keeplogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:background="@drawable/custom_button"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login_login"/>

        <TextView android:id="@+id/login_tv_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="@color/colorGreen"
            android:text="@string/login_create"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>

</ScrollView>